[gd_scene load_steps=31 format=3 uid="uid://catkneo6ygbp6"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_6aqq6"]
[ext_resource type="Texture2D" uid="uid://buq5qtghqgkeu" path="res://Assets/SOLDIER IDLE.png" id="1_r0flo"]
[ext_resource type="Texture2D" uid="uid://b0pb5jm5bak7d" path="res://Assets/SOLDIER RUN.png" id="2_brjb8"]
[ext_resource type="Texture2D" uid="uid://bgwjj65fydbnm" path="res://Assets/FINISHED SPRITE SHEET SOLDIER.png" id="3_1m5s4"]
[ext_resource type="Texture2D" uid="uid://cveeup87c7lou" path="res://Assets/SOLDIER STRAFE.png" id="3_g1w3d"]
[ext_resource type="AudioStream" uid="uid://dlexwsaeofj1u" path="res://Assets/loud-footsteps-62038.mp3" id="4_8anlo"]
[ext_resource type="Texture2D" uid="uid://cle8c5lkjkt82" path="res://Assets/ShootSoldier.png" id="4_ykeq1"]
[ext_resource type="AudioStream" uid="uid://8p0tjbcl0ogl" path="res://Assets/wounded-coughing-95153.mp3" id="6_pubhd"]
[ext_resource type="AudioStream" uid="uid://buin2fh448i8x" path="res://Assets/MachineGun.mp3" id="8_6ictn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_to4dp"]
atlas = ExtResource("3_1m5s4")
region = Rect2(228, 160, 38, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui5bh"]
atlas = ExtResource("1_r0flo")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdecx"]
atlas = ExtResource("1_r0flo")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rndil"]
atlas = ExtResource("1_r0flo")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ayo"]
atlas = ExtResource("1_r0flo")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq546"]
atlas = ExtResource("3_1m5s4")
region = Rect2(209, 32, 19, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii84u"]
atlas = ExtResource("4_ykeq1")
region = Rect2(42, 0, 42, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hil2y"]
atlas = ExtResource("2_brjb8")
region = Rect2(0, 64, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrkrk"]
atlas = ExtResource("2_brjb8")
region = Rect2(112, 64, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4u1g"]
atlas = ExtResource("2_brjb8")
region = Rect2(224, 64, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_178lc"]
atlas = ExtResource("2_brjb8")
region = Rect2(336, 64, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3p5m"]
atlas = ExtResource("2_brjb8")
region = Rect2(0, 256, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p52c"]
atlas = ExtResource("2_brjb8")
region = Rect2(112, 256, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ri7q"]
atlas = ExtResource("2_brjb8")
region = Rect2(224, 256, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1dy3"]
atlas = ExtResource("2_brjb8")
region = Rect2(336, 256, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knrxc"]
atlas = ExtResource("3_g1w3d")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypwy0"]
atlas = ExtResource("3_g1w3d")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7m5o"]
atlas = ExtResource("3_g1w3d")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg2r8"]
atlas = ExtResource("3_g1w3d")
region = Rect2(0, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_uua7k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_to4dp")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_ui5bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdecx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rndil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ayo")
}],
"loop": true,
"name": &"Idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq546")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii84u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii84u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii84u")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.1,
"texture": SubResource("AtlasTexture_hil2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrkrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4u1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_178lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3p5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p52c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ri7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1dy3")
}],
"loop": true,
"name": &"Sprint",
"speed": 6.0
}, {
"frames": [{
"duration": 1.1,
"texture": SubResource("AtlasTexture_knrxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypwy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7m5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg2r8")
}],
"loop": true,
"name": &"Strafe",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2fs5"]
size = Vector2(8.5, 25)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6aqq6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uua7k")
animation = &"Shoot"
frame_progress = 0.0106395

[node name="DeathPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pubhd")

[node name="FootstepPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8anlo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_l2fs5")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_6ictn")

[node name="GunPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_6ictn")
